@@ -9,6 +9,11 @@ acct_mgr-0.5 (not yet released) - branch 0.11
  * add account guard configuration to config admin panel
 
 
+acct_mgr-0.4.2 (27-Dec-2012) - branch 0.11
+ resolved issues
+ * #10730: AccountGuard.lock_time effectively disables account locking
+
+
 acct_mgr-0.4.1 (26-Dec-2012) - branch 0.11
  resolved issues
  * #5964: Prevent multiple calls to LoginModule._remote_user()
